Fix – sõnakogu filter overflow issue Add – check icon for active items Add – label to indicate multiselect functionality

--- a/wordweb-app/src/main/resources/scss/_utils.scss
+++ b/wordweb-app/src/main/resources/scss/_utils.scss
@@ -2,3 +2,7 @@
 .overflow-hidden{
   overflow: hidden !important;
 }
+
+.text-wrap{
+  white-space: normal !important;
+}
